[tool.poetry]
name = "beton-bot"
version = "0.0.1"
description = ""
authors = ["Andrii Hermak <hermak20102004@gmail.com>"]
readme = "README.md"
packages = [{include = "beton_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
adaptix = "^3.0.0b5"
pytelegrambotapi = "^4.17.0"
redis = "^5.0.4"
toml = "^0.10.2"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
